src/objects/Stage__c.object
<CustomObject>
    <description>Stage for festival</description>
    <fields>
        <fullName>Crowd_Capacity__c</fullName>
        <description>the number of attendees that this stage can accommodate.</description>
        <label>Crowd Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Festival__c</fullName>
        <description>which festival the stage is related to</description>
        <label>Festival</label>
        <referenceTo>Festival__c</referenceTo>
        <relationshipLabel>Stages</relationshipLabel>
        <relationshipName>Stages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Has_Piano__c</fullName>
        <defaultValue>false</defaultValue>
        <description>stage has piano or not</description>
        <label>Has Piano</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Stage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>a checkbox to indicate whether this is a main stage.</description>
        <label>Main Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_equipment_available__c</fullName>
        <description>availability of equipments for stage</description>
        <label>Special equipment available</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>lasers</fullName>
                </value>
                <value>
                    <fullName>pyrotechnics</fullName>
                </value>
                <value>
                    <fullName>smoke machines</fullName>
                </value>
                <value>
                    <fullName>multiple drumsets</fullName>
                </value>
                <value>
                    <fullName>extra subwoofers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>manager for the stage from the user object</description>
        <label>Stage Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Number__c</fullName>
        <description>No of volunteer required for the satge</description>
        <label>Volunteer Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Stage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>